<resources>
    <string name="app_name">Emergency App</string>
    <string name="app_profile_menu">Menu</string>
    <!--splash srceen -->
    <string name="app_slogan">Improving response</string>
    <string name="app_slogan_description">Slogan</string>

    <!-- Start screen -->
    <string name="title_activity_start_screen">Emergency App</string>
    <string name="action_settings">Settings</string>
    <string name="action_help">Help</string>


    <!-- login screen -->
    <string name="login_screen_header">Login</string>
    <string name="login_screen_username">Username</string>
    <string name="login_screen_password">Password</string>
    <string name="login_forgot_password">Forgot password?</string>
    <string name="login_screen_register">Register</string>
    <string name="title_activity_login_screen">Login</string>


    <!--registration screen-->
    <string name="register_screen_header">Register</string>
    <string name="register_screen_name">First name</string>
    <string name="register_screen_surname">Last name</string>
    <string name="register_screen_dateOfBirth">Date Of Birth</string>
    <string name="register_screen_dateOfBirth_hint">dd/mm/yyyy</string>
    <string name="register_screen_gender">Gender</string>
    <string name="register_screen_gender_male">Male</string>
    <string name="register_screen_gender_female">Female</string>
    <string name="register_screen_email">Email</string>
    <string name="register_screen_countryCode">+27</string>
    <string name="register_screen_cellNo">Phone number</string>
    <string name="register_screen_nextKinName">Next of Kin Name</string>
    <string name="register_screen_nextKinCellNo">Next of Kin phone number</string>
    <string name="register_screen_medicalCondition">Medical condition</string>
    <string name="register_screen_medicalHint">Provide if any.</string>
    <string name="register_screen_username">Username</string>
    <string name="register_screen_password">Password</string>
    <string name="register_screen_password_confirm">Confirm Password</string>
    <string name="register_screen_password_confirmHint">Re-enter password</string>
    <string name="title_activity_registration_screen">Registration</string>

    <!-- Emergency choose screen -->
    <string name="title_activity_emergency_choice">Emergency</string>
    <string name="emergency_choice_header">Please choose emergency type.</string>
    <string name="emergency_choice_fire">Fire</string>
    <string name="emergency_choice_medical">Medical</string>

    <!--fire emergency screen -->
    <string name="title_activity_fire_emergency">Fire</string>
    <string name="fire_header_small">Minor fire</string>
    <string name="fire_header_big">Major fire</string>
    <string name="fire_check_injured">Ambulance necessary</string>
    <string name="fire_button_report">Continue.. </string>
    <string name="fire_heading"><u>Fire intensity</u></string>
    <string name="fire_heading_two"><u>Fire Type</u></string>
    <string name="fire_heading_three"><u>Additional information</u></string>
    <string name="fire_type">Fire type</string>

    <!-- medical emergency screen -->
    <string name="title_activity_medical_emergency">Medical</string>
    <string name="search_title">Search List</string>
    <string name="medical_type_assault">1:Assault</string>
    <string name="medical_type_suicide">2:Attempted Suicide</string>
    <string name="medical_type_breathing">3:Breathing problems</string>
    <string name="medical_type_choking">4:Choking</string>
    <string name="medical_type_collapse">5:Collapse</string>
    <string name="medical_type_seizures">6:Seizure</string>
    <string name="medical_type_diabetic">7:Diabetic</string>
    <string name="medical_type_domestic">8:Domestic accidents</string>
    <string name="medical_type_drowning">9:Drowning / Water Incident</string>
    <string name="medical_type_m.v.a">10:Motor vehicle accidents / collisions</string>
    <string name="medical_type_maternity">11:Maternity</string>
    <string name="medical_type_overdose">12:Overdose</string>
    <string name="medical_type_shooting">13:Shooting</string>
    <string name="medical_type_poisoning">14:Poisoning</string>
    <string name="medical_type_sport">15:Sport injury</string>
    <string name="medical_type_bites">16:Bites / Stings</string>
    <string name="medical_type_infections">17:Infections</string>
    <string name="medical_type_stroke">18:Stroke</string>


    <!-- review screen -->
    <string name="title_activity_report_review">Review</string>
    <string name="review_header">Report details</string>
    <string name="review_report_type_one">Report type:</string>
    <string name="review_report_type_one_plus">Medical</string>
    <string name="review_report_type_two">Details:</string>
    <string name="review_report_type_two_plus">Motor vehicle accident</string>
    <string name="review_report_type_three">Time Reported:</string>
    <string name="review_report_type_three_plus">08:00</string>
    <string name="review_report_type_four">Your location:</string>
    <string name="review_report_type_four_plus">32"56"12"E</string>
    <string name="review_report_type_five">City:</string>
    <string name="review_report_type_five_plus">Johannesburg</string>
    <string name="review_report_type_six">Reference</string>
    <string name="review_report_type_six_plus">Outstanding</string>
    <string name="review_cancel">Cancel emergency</string>

    <!-- profile -->
    <string name="activity_profile_view">View profile</string>
    <string name="activity_profile_report">View incidents</string>
    <string name="activity_profile_about">About</string>
    <string name="title_activity_profile">Profile</string>
    <string name="activity_profile_update">Update</string>
    <string name="activity_edit_profile">Edit profile</string>
    <string name="title_activity_report_view">ReportView</string>
    <string name="title_profile_logout">Logout</string>
     <string name="activity_profile_ok">ok</string>
    <string name="time_list">25/03/2015 15:45:03</string>
    <string name="title_activity_profile_edit">Profile Edit</string>
    <string name="title_activity_search_results">Search</string>

    <!--incident report-->
    <string name="title_activity_medical_report">Incident Report</string>
    <string name="incident_report_header">Other</string>
    <string name="incident_report_extra">Additional Information?</string>
    <string name="widget_label">Emergency Call</string>
    <string name="searching_gps">Searching...</string>
    <string name="incident_report_button">Report</string>

</resources>
