<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.improveresponse.emergencyapp.MedicalEmergency">

    <item android:id="@+id/search"
        android:title="@string/search_title"
        android:icon="@drawable/ic_search"
        android:showAsAction="collapseActionView|ifRoom"
        android:actionViewClass="android.widget.SearchView" />

    <item
        android:id="@+id/profile_pic"
        android:title="@string/app_profile_menu"
        android:icon="@drawable/user"
        android:showAsAction="always">
        <menu>
            <item
                android:id="@+id/profile_view"
                android:title="@string/activity_profile_view"/>

            <item
                android:id="@+id/profile_view_report"
                android:title="@string/activity_profile_report"/>


            <item
                android:id="@+id/logout_menu"
                android:title="@string/title_profile_logout"/>
            <item
                android:id="@+id/profile_about"
                android:title="@string/activity_profile_about"/>

        </menu>
    </item>

</menu>