<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.improveresponse.emergencyapp.BaseActivity">
    <item
        android:id="@+id/profile_pic"
        android:title="@string/app_profile_menu"
        android:icon="@drawable/user"
        android:showAsAction="ifRoom">
    <menu>
        <item
            android:id="@+id/profile_view"
            android:title="@string/activity_profile_view"/>

        <item
            android:id="@+id/profile_view_report"
            android:title="@string/activity_profile_report"/>

        <item
            android:id="@+id/logout_menu"
            android:title="@string/title_profile_logout"/>
        <item
            android:id="@+id/profile_about"
            android:title="@string/activity_profile_about"/>
        <!--IMPLEMENT THE CALLING ACTIVITY-->
    </menu>
    </item>
</menu>
