<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.improveresponse.emergencysos.RegistrationScreen"
    android:background="@color/start_background_color">

        <LinearLayout
            android:id="@+id/register_input_layout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:focusableInTouchMode="true">

            <TextView
                android:id="@+id/register_screen"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/register_screen_header"
                android:textSize="@dimen/header_text_size"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:gravity="center"
                android:textColor="@color/text_color_all"/>

            <TextView
                android:id="@+id/lbl_firstnames"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/activity_text_size"
                android:text="@string/register_screen_name"
                />

            <EditText
                android:id="@+id/txt_register_name"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/register_screen_name"
                android:background="@drawable/textbox_background"

                />

            <TextView
                android:id="@+id/lbl_lastnames"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/activity_text_size"
                android:layout_marginTop="@dimen/activity_textbox_vertical_space"
                android:text="@string/register_screen_surname"
                />

            <EditText
                android:id="@+id/txt_register_surname"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/register_screen_surname"
                android:background="@drawable/textbox_background"
                />

            <TextView
                android:id="@+id/lbl_register_dateOfBirth"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/register_screen_dateOfBirth"
                android:textSize="@dimen/activity_text_size"
                android:layout_marginTop="@dimen/activity_textbox_vertical_space"/>

            <EditText
                android:id="@+id/txt_register_dateOfBirth"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/register_screen_dateOfBirth_hint"
                android:background="@drawable/textbox_background"
                />

            <TextView
                android:id="@+id/lbl_gender"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_textbox_vertical_space"
                android:textSize="@dimen/activity_text_size"
                android:text="@string/register_screen_gender"
                />
           <LinearLayout
               android:layout_width="fill_parent"
               android:layout_height="wrap_content"
               android:orientation="horizontal">

               <RadioGroup
                   android:id="@+id/register_radioGroup"
                   android:layout_width="fill_parent"
                   android:layout_height="wrap_content"
                   android:orientation="horizontal"
                   android:onClick="onRadioButtonClicked">

                   <RadioButton
                       android:id="@+id/lbl_gender_m"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:textSize="@dimen/activity_text_size"
                       android:text="@string/register_screen_gender_male"
                       android:layout_weight="1"
                       android:onClick="cmdMale_Select"
                       />

                   <RadioButton
                       android:id="@+id/lbl_gender_f"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:textSize="@dimen/activity_text_size"
                       android:text="@string/register_screen_gender_female"
                       android:layout_weight="1"
                       android:onClick="cmdFemale_Click"
                       />

               </RadioGroup>

           </LinearLayout>

            <TextView
                android:id="@+id/lbl_email"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_textbox_vertical_space"
                android:textSize="@dimen/activity_text_size"
                android:text="@string/register_screen_email"
                />

            <EditText
                android:id="@+id/txt_Email"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:hint="@string/register_screen_email"
                android:background="@drawable/textbox_background"
                />

            <TextView
                android:id="@+id/lbl_register_phoneNum"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/register_screen_cellNo"
                android:textSize="@dimen/activity_text_size"
                android:layout_marginTop="@dimen/activity_textbox_vertical_space"/>

            <LinearLayout
                android:id="@+id/register_phone_layout"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/register_region_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/register_screen_countryCode"
                    android:textSize="@dimen/activity_text_size"/>

                <EditText
                    android:id="@+id/txt_register_phoneNum"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/textbox_background"
                    android:hint="@string/register_screen_cellNo"
                    android:inputType="number"
                    android:maxLength="9"
                    />

            </LinearLayout>


            <TextView
                android:id="@+id/lbl_register_nextKinName"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/register_screen_nextKinName"
                android:textSize="@dimen/activity_text_size"
                android:layout_marginTop="@dimen/activity_textbox_vertical_space"/>

            <EditText
                android:id="@+id/txt_register_nextKinName"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/textbox_background"
                android:hint="@string/register_screen_nextKinName"

                />

            <TextView
                android:id="@+id/lbl_register_nextKinPhoneNum"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/register_screen_nextKinCellNo"
                android:textSize="@dimen/activity_text_size"
                android:layout_marginTop="@dimen/activity_textbox_vertical_space"/>

            <LinearLayout
                android:id="@+id/register_nextKinphone_layout"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/register_nextKinregion_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/register_screen_countryCode"
                    android:textSize="@dimen/activity_text_size"/>

                <EditText
                    android:id="@+id/txt_register_nextKinphoneNum"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/textbox_background"
                    android:hint="@string/register_screen_nextKinCellNo"
                    android:inputType="number"
                    android:maxLength="9"
                    />

            </LinearLayout>

            <TextView
                android:id="@+id/lbl_username"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_textbox_vertical_space"
                android:textSize="@dimen/activity_text_size"
                android:text="@string/register_screen_username"
                />

            <EditText
                android:id="@+id/txt_username"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/register_screen_username"
                android:background="@drawable/textbox_background"

                />

            <TextView
                android:id="@+id/lbl_password"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/register_screen_password"
                android:textSize="@dimen/activity_text_size"
                android:layout_marginTop="@dimen/activity_textbox_vertical_space"

                />

                <EditText
                    android:id="@+id/txt_password"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textVisiblePassword"
                    android:hint="@string/register_screen_password"
                    android:background="@drawable/textbox_background"
                    />

            <TextView
                android:id="@+id/lbl_confirm"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/activity_text_size"
                android:layout_marginTop="@dimen/activity_textbox_vertical_space"
                android:text="@string/register_screen_password_confirm"
                />



            <EditText
                android:id="@+id/txt_confirm_password"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="textVisiblePassword"
                android:hint="@string/register_screen_password_confirmHint"
                android:background="@drawable/textbox_background"
                />



            <TextView
                android:id="@+id/lbl_register_medicalCondition"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/register_screen_medicalCondition"
                android:textSize="@dimen/activity_text_size"
                android:layout_marginTop="@dimen/activity_textbox_vertical_space"/>

            <EditText
                android:id="@+id/txt_register_medicalCondition"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/textbox_background"
                android:hint="@string/register_screen_medicalHint"
                android:inputType="textMultiLine"
                />

            <Button
                android:id="@+id/login_btn2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/register_screen_header"
                android:textColor="@color/splash_text_color"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:background="@drawable/button_background"
                android:onClick="cmdRegister_Click"
                />
        </LinearLayout>

    </ScrollView>
