<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.invovatives.emergencysos.EmergencyChooseScreen"
    android:background="@color/start_background_color">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/emergency_choice_header"
        android:textSize="@dimen/header_text_size"
        android:textColor="@color/text_color_all"
        />

    <!-- layout for buttons -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="horizontal"
        android:gravity="center_horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:paddingRight="@dimen/activity_vertical_margin">

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/icon_background"
                android:onClick="goFire"
                android:src="@drawable/firebutton"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/emergency_choice_fire"
                android:textSize="@dimen/activity_text_size"
                android:textColor="@color/text_color_all"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:paddingLeft="@dimen/activity_vertical_margin">

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/icon_background"
                android:onClick="goMedical"
                android:src="@drawable/medicalbutton"
                 />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/emergency_choice_medical"
                android:textSize="@dimen/activity_text_size"
                android:textColor="@color/text_color_all"
                />
        </LinearLayout>

    </LinearLayout>
    <LinearLayout
        android:id="@+id/call_btn_img"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        >

        <ImageButton
            android:id="@+id/calling_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/icon_background"
            android:src="@drawable/phone"
            android:onClick="goPhone"
            />
        </LinearLayout>


</RelativeLayout>
